!feat/insert_question_to_quiz : handle insert question to quiz in case questions is null
